# streamlit_upload_gcs

./: README.md  app.py  pyproject.toml  requirements.txt
data/: gps.csv
